# q-verse

./: .gitignore  Cargo.toml  README.md  qverse.db
docs/: PERFORMANCE.md  SECURITY.md  SYSTEM_COMPARISON.md
q-verse-mobile/: App.js  app.json  package.json
q-verse-mobile/src/screens/: HomeScreen.js  MarketScreen.js  WalletScreen.js
q-verse-web/: next.config.ts  package-lock.json  package.json
q-verse-web/app/: error.tsx  global-error.tsx  layout.tsx  page.tsx
q-verse-web/app/community/: page.tsx
q-verse-web/app/community/airdrop/: page.tsx
q-verse-web/app/components/: Dashboard.tsx  Footer.tsx  Navbar.tsx
q-verse-web/app/components/dashboard/: Sidebar.tsx
q-verse-web/app/dev/ide/: page.tsx
q-verse-web/app/dev/verification/: page.tsx
q-verse-web/app/developers/: page.tsx
q-verse-web/app/developers/api-docs/: page.tsx
q-verse-web/app/ecosystem/: page.tsx
q-verse-web/app/enterprise/audit/: page.tsx
q-verse-web/app/enterprise/compliance/: page.tsx
q-verse-web/app/enterprise/dark-pool/: page.tsx
q-verse-web/app/enterprise/layer2/: page.tsx
q-verse-web/app/exchange/cex/: page.tsx
q-verse-web/app/exchange/dex/: page.tsx
q-verse-web/app/finance/farming/: page.tsx
q-verse-web/app/finance/staking/: page.tsx
q-verse-web/app/governance/: page.tsx
q-verse-web/app/mobile/: page.tsx
q-verse-web/app/network/bridge/: page.tsx
q-verse-web/app/network/explorer/: page.tsx
q-verse-web/app/network/oracles/: page.tsx
q-verse-web/app/system/metrics/: page.tsx
q-verse-web/app/system/status/: page.tsx
q-verse-web/app/tokens/: page.tsx
q-verse-web/app/universe/: UniverseScene.tsx  page.tsx
q-verse-web/app/whitepaper/: page.tsx
q-verse-web/components/: ClientErrorBoundary.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx
q-verse-web/hooks/: useRealtime.ts
q-verse-web/lib/: api.ts  websocket.ts
q-verse-web/public/: create_icons.sh  manifest.json
scripts/deployment/: DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  apply_ddos_protection.sh  apply_security_hardening.sh  check_backend.sh  check_deployment_status.sh  check_nyc3_detailed.sh  check_nyc3_multiple_methods.sh  console_access_guide.md  console_error_solution.md  deploy_frontend.sh  deploy_quick.sh  deploy_qverse_core.sh  deploy_with_fixes.sh  digitalocean_support_ticket.md  emergency_lockdown.sh  emergency_nyc3_mitigation.sh  emergency_nyc3_recovery.md  firewall_ddos_protection.sh  fix_all_nginx.sh  fix_nginx.sh  fix_nginx_complete.sh  fix_nginx_separate_sites.sh  fix_nyc3_network.sh  fix_nyc3_profile_errors.sh  install_qverse_server.sh  install_qverse_web.sh  nginx_rate_limiting.conf  nyc3_comprehensive_security_check.sh  nyc3_console_commands.sh  nyc3_console_commands_urgent.md  nyc3_security_fix_report.md  patch_qverse_web.sh  quick_deploy.sh  quick_restart_backend.sh  remote_install.sh  security_check.sh  start_backend.sh
src/: ai.rs  api.rs  api_update_snippet.rs  batch.rs  cache.rs  compliance.rs  config.rs  contracts.rs  crypto.rs  db.rs  developer.rs  errors.rs  exchange.rs  lib.rs  main.rs  metrics.rs  middleware.rs  mobile.rs  models.rs  network.rs  openapi.rs  qrc20.rs  validation.rs  vm.rs  wallet.rs  websocket.rs
src/crypto/: mod.rs  zkp.rs
