[package]
name = "q-verse-core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.12.1", features = ["openssl"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
openssl = { version = "0.10.75", features = ["vendored"] }
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
