[package]
name = "q-verse-core"
version = "0.2.2"
edition = "2024"

[dependencies]
# Web & API
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.7"
actix-web-actors = "4"
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
# Using 0.7 to ensure maximum compatibility with current async runtime if 0.8 caused issues, 
# but ensuring features are correct.
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "time", "uuid"] }

# Cryptography (Quantum Safe)
pqcrypto-dilithium = "0.5.0"
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Networking (P2P Layer)
# Using standard features for 0.53
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "gossipsub", "mdns", "kad", "tokio"] }

# Smart Contract Engine (WASM)
wasmer = "4.2" 

# Banking & Compliance (ISO 20022)
quick-xml = { version = "0.31", features = ["serialize"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
base64 = "0.22"
num_cpus = "1.0"
